[project]
name = "plurludanta"
version = "3.14.2"
description = "An HTTP based multi user dungeon?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.27.0",
    "pytest>=8.3.4",
    "sqlmodel>=0.0.22",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "pyright>=1.1.392.post0",
]
